# parallel_levenshtein

./: .gitignore  CMakeLists.txt  Licence  README.md  make_plots.py  requirements.txt
data/: german_words.txt  weights_english.txt  weights_german.txt
eval/: lev_precompute.py  lev_precompute_parts.py  lev_query_by_threads.py  lev_query_skipped_nodes_by_query_size.py  lev_query_skipped_nodes_by_threads.py  lev_query_time_by_n.py  lev_query_time_by_query_size.py  lev_query_time_by_word_count.py  trie_buildup.py  trie_buildup_thread_collisions.py  trie_num_nodes_by_word_count.py  trie_workloads.py
implementation/: accelerated_levenshtein.hpp  accelerated_levenshtein_sequential.hpp  concurrent_container.hpp  concurrent_queue.hpp  levenshtein_penalty_functions.hpp  locking.hpp  naive_levenshtein.hpp  random.hpp  sequential_levenshtein.hpp  sequential_trie.hpp  sorted_buildup_trie.hpp  trie.hpp  vectorized_trie.hpp
source/: common.hpp  demo.cpp  test_levenshtein.cpp  test_trie.cpp  time_levenshtein.cpp  time_levenshtein_query.cpp  time_trie.cpp
utils/: calculate_kb_distance.py  line_reader.hpp  statistics_collector.hpp  string_utils.hpp
